// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render a <Button> with some content component 1`] = `
<Styled(Component)
  href="foo"
  tagName="button"
>
  <styled.div>
    <div>
      Content
    </div>
  </styled.div>
</Styled(Component)>
`;

exports[`<Button /> should render an active <Button> with some content 1`] = `
<Styled(Component)
  active={true}
  tagName="button"
>
  <styled.div>
    Content
  </styled.div>
</Styled(Component)>
`;

exports[`<Button /> should render an active disabled <Button> with some content 1`] = `
<Styled(Component)
  active={true}
  disabled={true}
  tagName="button"
>
  <styled.div>
    Content
  </styled.div>
</Styled(Component)>
`;
